login server callbacks almost finished

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "git": "^0.1.5",
     "mongoose": "^4.6.5",
     "http": "^0.0.0",
+    "node-uuid": "^1.4.7",
     "socket.io": "^1.5.0",
     "gulp": "^3.9.1",
     "todomvc": "^0.1.1"
