--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "login_server.js",
   "dependencies": {
     "express": "^4.14.0",
-    "shortid": "^2.2.6",
     "git": "^0.1.5",
-    "mongoose": "^4.6.5",
-    "http": "^0.0.0",
-    "node-uuid": "^1.4.7",
-    "socket.io": "^1.5.0",
+    "graceful-fs": "^4.1.11",
     "gulp": "^3.9.1",
+    "http": "^0.0.0",
+    "minimatch": "^3.0.4",
+    "mongoose": "^4.6.5",
+    "node-uuid": "^1.4.7",
+    "shortid": "^2.2.6",
+    "socket.io": "^1.5.0",
     "todomvc": "^0.1.1"
   },
   "devDependencies": {},
