db setup for zone and npc. world server now boots up zone.js

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nodeserver",
+  "name": "P99Backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "NodeJS Server using SocketIO to serve Unity Client",
   "main": "login_server.js",
   "dependencies": {
     "express": "^4.14.0",
@@ -10,8 +10,9 @@
     "gulp": "^3.9.1",
     "http": "^0.0.0",
     "minimatch": "^3.0.4",
-    "mongoose": "^4.6.5",
+    "mongoose": "^4.10.8",
     "node-uuid": "^1.4.7",
+    "pathfinding": "^0.4.18",
     "shortid": "^2.2.6",
     "socket.io": "^1.5.0",
     "todomvc": "^0.1.1"
