--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pathfinding": "^0.4.18",
     "shortid": "^2.2.6",
     "socket.io": "^1.5.0",
+    "sql-to-json": "^1.5.0",
     "todomvc": "^0.1.1",
     "vec2": "^1.6.0"
   },
